--- a/_config.yml
+++ b/_config.yml
@@ -14,6 +14,6 @@ description: >
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://yourdomain.com" # the base hostname & protocol for your site
 github_username:  scumrobotics
-
+org_name: Scum Robotics Group
 # Build settings
 markdown: kramdown
